--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="container1">
       <div id="title">
         <div class="title-name">
-          <h1>Tell us your Name, we'll tell you <br />Who You Are!</h1>
+          <h1>Tell us your Name, we'll tell you Who You Are!</h1>
         </div>
         <div class="description">
           <p>
@@ -24,9 +24,9 @@
         <input type="text" placeholder="Insert Your Name" />
         <button type="submit"><img src="assets/prediction-icon.png" /></button>
       </div>
-      <div id="container2">
-        <div id="prediction"></div>
-      </div>
+    </div>
+    <div id="container2">
+      <img src="" id="dog-img" />
     </div>
     <script src="app.js"></script>
   </body>
