--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
         </div>
       </div>
       <div id="insert-box">
-        <input type="text" placeholder="Insert Your Name" />
-        <button type="submit"><img src="assets/prediction-icon.png" /></button>
+        <input type="text" id="name" placeholder="Insert Your Name" />
+        <button id="predict-button">
+          <img src="assets/prediction-icon.png" />
+        </button>
       </div>
+      <div id="prediction"></div>
     </div>
     <div id="container2">
       <img src="" id="dog-img" />
