created prediction table

--- a/index.html
+++ b/index.html
@@ -26,7 +26,22 @@
           <img src="assets/prediction-icon.png" />
         </button>
       </div>
-      <div id="prediction"></div>
+      <div id="prediction">
+        <table>
+          <tr class="header">
+            <td>Name</td>
+            <td>Age</td>
+            <td>Gender</td>
+            <td>Nationality</td>
+          </tr>
+          <tr>
+            <td id="name-display"></td>
+            <td id="age"></td>
+            <td id="gender"></td>
+            <td id="nationality"></td>
+          </tr>
+        </table>
+      </div>
     </div>
     <div id="container2">
       <img src="" id="dog-img" />
