--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
       </div>
       <div id="prediction">
         <table>
-          <tr class="header">
-            <td>Name</td>
-            <td>Age</td>
-            <td>Gender</td>
-            <td>Nationality</td>
+          <tr>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Gender</th>
+            <th>Nationality</th>
           </tr>
           <tr>
             <td id="name-display"></td>
