--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       <img src="" id="dog-img" />
     </div>
 
-    <script src="app.js"></script>
+    <!-- <script src="app.js"></script> -->
+    <script src="other-methods.js"></script>
   </body>
 </html>
